file(GLOB MAIN_SRCS "cryptotool.cpp" "./*.cpp" "./*.c" "./*.h")
message(NOTICE "${MAIN_SRCS}")
file(GLOB TINYAES_SRCS "./tinyaes/*.cpp" "./tinyaes/*.c" "./tinyaes/*.h")
message(NOTICE "${TINYAES_SRCS}")
file(GLOB CRYPTOPP_SRCS "./cryptopp/*.cpp" "./cryptopp/*.c" "./cryptopp/*.h")
#message(NOTICE "${CRYPTOPP_SRCS}")
file(GLOB CRYPTOPP_PEM_SRCS "./cryptopp-pem/*.cpp" "./cryptopp-pem/*.c" "./cryptopp-pem/*.h")
idf_component_register(SRCS ${MAIN_SRCS} ${TINYAES_SRCS} ${CRYPTOPP_SRCS} ${CRYPTOPP_PEM_SRCS} PRIV_INCLUDE_DIRS "." "./tinyaes" "./cryptopp")